# VitureWorkspace

./: .gitignore  README.md  devenv.nix
Viture/Android/release/: NOTICE
Viture/Linux_ARM/release/include/: viture_glasses_provider.h
Viture/Linux_x86_64/release/include/: viture_device_carina.h
Viture/Unity/com.viture.xr/: CHANGELOG.md  LICENSE.md  README.md  package.json
Viture/Unity/com.viture.xr/Assets/: Viture Input Actions.inputactions
Viture/Unity/com.viture.xr/Editor/: Viture.XR.Editor.asmdef  VitureBuildProcessor.cs  VitureBuildingBlocks.cs  VitureEditorMenu.cs  VitureEditorUtils.cs  ViturePackageMetadata.cs  VitureProjectValidation.cs  VitureSettingsEditor.cs  VitureSetupWizard.cs
Viture/Unity/com.viture.xr/Runtime/: UnitySubsystemsManifest.json  Viture.XR.asmdef  VitureCapture.cs  VitureConstants.cs  VitureLoader.cs  VitureSettings.cs  VitureTypes.cs  VitureXR.cs
Viture/Unity/com.viture.xr/Runtime/Android/: xr-lib.aar
Viture/Unity/com.viture.xr/Runtime/HandTracking/: VitureHandDevice.cs  VitureHandFilter.cs  VitureHandSubsystem.cs
Viture/Unity/com.viture.xr/Runtime/MarkerTracking/: ArucoMarkerLibrary.cs  MarkerLibrary.cs  VitureTrackedMarker.cs  VitureTrackedMarkerManager.cs
Viture/Unity/com.viture.xr/Runtime/NativeApi/: Capture.cs  Glasses.cs  HandTracking.cs  HeadTracking.cs  MarkerTracking.cs  Rendering.cs  System.cs
hello_flutter/: pubspec.yaml
hello_flutter/lib/: main.dart
hello_flutter/macos/: .gitignore
hello_viture/: CMakeLists.txt  README.md  hello_viture  main.cpp
(+31 files in other folders)
